Fix Wide UI on Mobile

--- a/static/style.css
+++ b/static/style.css
@@ -815,6 +815,7 @@ td, th {
 		flex-direction: column-reverse;
 		padding: 10px;
 		margin: 100px 0 10px 0;
+		max-width: 100%;
 	}
 	
 	nav {
